Updates to text and changed Website Developer to the more standard Web Developer in text, page descriptions and seo.

--- a/src/pages/prologue_the_first_site.html
+++ b/src/pages/prologue_the_first_site.html
@@ -1,6 +1,6 @@
 ---
 title: Prologue; The First Site - where it all started
-description: How I started in website developement and my first professional site
+description: How I started in web developement and my first professional site
 page_number: 12
 ---
 
@@ -8,14 +8,14 @@ page_number: 12
 
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Prologue</div>
-        <h1>The First Site &mdash; where it all started&hellip;</h1>
-        <h2>Shames Mountain, British Columbia Ski Area Co-Op</h2>
+        <h1>The First Site &mdash; where it all started.</h1>
+        <h2>Shames Mountain, British Columbia Ski Area Co&mdash;Op</h2>
 
-        <p class="subpage__left_chapter__paragraph_space">I was taking an advanced web building course in my last semester at the University of Alberta, Canada.  We were asked to make up a small company, imagine what issues they might have, and create a website proposal with a design mockup and explain how the site would address those issues.  I thought, why make up a company?  I already know a company to base my proposal on &mdash; the company was Shames Mountain Ski Area. A ski hill I had visited a few times.  Unbeknownst to me, while I was creating this proposal, they had already hired a company to redesign their site.  When my course was done, I sent the website proposal to Shames Mountain just to see if they liked the work.  That morning they had received the hired companies' proposal and were very disappointed with the results.  Then mine arrived.  Shortly after, I received a call, &ldquo;this is precisely what we were looking for! Sarah, we want to hire you to rebuild our site.&rdquo; I got to start my first professional job before I had graduated, I was so excited!</p>
+        <p class="subpage__left_chapter__paragraph_space">I was taking an advanced web building course in my last semester at the University of Alberta, Canada.  We were asked to make up a small company, imagine what issues they might have, and create a website proposal with a design mockup and explain how the site would address those issues.  I thought, why make up a company?  I already know a company to base my proposal on &mdash; the company was Shames Mountain Ski Area.  A ski hill I had visited a few times.  Unbeknownst to me, while I was creating this proposal, they had already hired a company to redesign their site.  When my course was done, I sent the website proposal to Shames Mountain just to see if they liked the work.  That morning they had received the hired companies' proposal and were very disappointed with the results.  Then mine arrived.  Shortly after, I received a call, &ldquo;this is precisely what we were looking for!  Sarah, we want to hire you to rebuild our site.&rdquo; I got to start my first professional job before I had graduated, I was so excited!</p>
 
         <h3>Shames Mountain Ski Area</h3>
         <p>I originally created the site in 2003 and rebuilt it in 2009, pictured here.</p>
-        <p>The concept for the Shame website came from the key features of the ski area that management wanted to focus on for the Winter Season of 2009; the fact that they receive some of the most snowfall in North America, and that they are a &ldquo;Jewel of the Wilds.&rdquo; From these two concepts, I came up with the look of all the main features of the site being topped with snow.  I used this theme to influence my choices of colors, style, and shapes.  This carries through to the individual pages whose titles are snow-capped.</p>
+        <p>The concept for the Shame website came from the key features of the ski area that management wanted to focus on for the Winter Season of 2009; the fact that they receive some of the most snowfall in North America, and that they are a &ldquo;Jewel of the Wilds.&rdquo;  From these two concepts, I came up with the look of all the main features of the site being topped with snow.  I used this theme to influence my choices of colors, style, and shapes.  This carries through to the individual pages whose titles are snow&mdash;capped.</p>
       </div>
 
 </article>
