--- a/src/pages/introduction_sarah_k_russell.html
+++ b/src/pages/introduction_sarah_k_russell.html
@@ -1,6 +1,6 @@
 ---
-title: Chapter One; Introduction to the Website Developer; Sarah K. Russell
-description: The inspiration for this website build. How I became a wedsite developer over a decade ago at the University of Alberta
+title: Chapter One; Introduction to the Web Developer; Sarah K. Russell
+description: The inspiration for this website build. How I became a wed developer over a decade ago at the University of Alberta
 chapter: One
 page_number: 2
 ---
@@ -9,12 +9,12 @@ page_number: 2
 
       <div class="subpage__left_contents">
             <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter}}</div>
-            <h1>Introduction to the<br />Website Developer;</h1>
+            <h1>Introduction to the<br />Web Developer;</h1>
             <h2>Sarah K. Russell</h2>
 
             <p>I fell in love with web development in my last year at the University of Alberta, Canada.  I signed up for Web Design when I needed one more studio course to complete my Bachelor of Design.  Before I knew it, I was at the top of my class!  It all just clicked.  With this thrilling discovery, my career was shaped from that day forward.</p>
 
-            <p>For over a decade, I have been working professionally building websites.  To develop websites is to be continually learning new things and discovering how best to apply them.  This fantastic industry is always coming up with new and better ways of building websites.  All the while, making sure you give the user the best experience you can.  It is the perfect industry for someone like myself, who is always looking for a fun new challenge and who loves continued learning.  Within my years, I have relearned how to build websites with the significant changes we've experienced; tables and fixed-width, floats, responsive building and mobile-first, and now CSS Flexbox and Grid.</p>
+            <p>For over a decade, I have been working professionally building websites.  To develop websites is to be continually learning new things and discovering how best to apply them.  This fantastic industry is always coming up with new and better ways of building websites.  All the while, making sure you give the user the best experience you can.  It is the perfect industry for someone like myself, who is always looking for a fun new challenge and who loves continued learning.  Within my years, I have relearned how to build websites with the significant changes we've experienced; tables and fixed&mdash;width, floats, responsive building and mobile&mdash;first, and now CSS Flexbox and Grid.</p>
       </div>
 
 </article>
@@ -23,11 +23,11 @@ page_number: 2
 
       <div class="subpage__right_contents" id="right_contents_text">
         <h3>This Site</h3>
-        <p>Growing up in South Carolina, there was a small three-room library just down the block from our house. This was before the internet, so when I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy that week. This eagerness to jump into new areas of interest would eventually lead me to make a connection with the internet and build my career around it. The internet allows anyone to access information on anything &mdash; it is just as precious to me now as my little blue library card was to me all those years ago.</p>
+        <p>Growing up in South Carolina, there was a small three&mdash;room library just down the block from our house.  This was before the internet, so when I wanted to learn about something, I would run down to the library and dive into all the books I could get my hands on whatever new subject had tickled my fancy that week.  This eagerness to jump into new areas of interest would eventually lead me to make a connection with the internet and build my career around it.  The internet allows anyone to access information on anything &mdash; it is just as precious to me now as my little blue library card was to me all those years ago.</p>
 
-        <p>In 2019, this portfolio site was rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books. Books and websites are very much the same &mdash; a medium for information or telling a story. The site format allowed me to focus on the graphic design of the page structure with an emphasis on typography.</p>
+        <p>In 2019, this portfolio site was rebuilt to pay homage to those days in the library surrounded by glorious &mdash; books.  Books and websites are very much the same &mdash; a medium for information or telling a story.  The site format allowed me to focus on the graphic design of the page structure with an emphasis on typography.</p>
 
-        <p><em>The homepage is a CSS Flexbox layout while the interior page layout was more suited to CSS Grid. SEO optimized and ADA / Section 508 compliant.</em></p>
+        <p><em>The homepage is a CSS Flexbox layout while the interior page layout was more suited to CSS Grid.  SEO optimized and ADA / Section 508 compliant.</em></p>
 
         <ul class="subpage__right_contents_list">
           <li><p>Contact me at <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a>.</p></li>
