Changing page and chapter numbers to accommodate new page.

--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Four; Bert Riggall's Greater Waterton
+title: Chapter Five; Bert Riggall's Greater Waterton
 description: Creation of the website for the book, Bert Riggall's Greater Waterton
-chapter_number: Four
-page_number: 8
+chapter_number: Five
+page_number: 10
 ---
 
             <article class="subpage__left">
