--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Five; Black Market Research
+title: Chapter Six; Black Market Research
 description: Site built for the Nashville based band, Black Market Research
-chapter_number: Five
-page_number: 10
+chapter_number: Six
+page_number: 12
 ---
 
 <article class="subpage__left">
