--- a/src/pages/judith_nickol_website.html
+++ b/src/pages/judith_nickol_website.html
@@ -1,32 +1,30 @@
 ---
-title: Chapter Four; Foothill Flyers, Colorado Disc Golf Club
-description: My latest pro bono website
-chapter_number: Four
-page_number: 8
+title: Chapter Three; Judith Nickol, Canadian Artist
+description: Creating a gallery like experience website
+chapter_number: Three
+page_number: 6
 ---
 
             <article class="subpage__left">
 
                   <div class="subpage__left_contents">
                     <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
-                    <h1>Foothill Flyers</h1>
-                    <h2>Colorado Disc Golf Club</h2>
+                    <h1>Judith Nickol</h1>
+                    <h2>Canadian Artist</h2>
 
                     <p>The website is a place for the local disc golf club to post information about their annual events, biweekly tags matches and bring attention to the fantastic local courses they access.</p>
 
                     <p>I wanted the site to be fun and informative.  I designed the website to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
 
-                    <p><em>Built in 2019.</em></p>
+                    <p><em>Built in 2020.</em></p>
                   </div>
 
             </article>
 
             <aside class="subpage__right">
-
                   <div class="subpage__right_contents">
-                        <a href="https://ffdgc.net"><img src="{{root}}/assets/img/foothill_flyers_homepage_Aug_2019.jpg" alt="Homepage of Foothill Flyers homepage">FFDGC.net</a>
+                        <a href="https://judithnickol.com"><img src="{{root}}/assets/img/" alt="Section of single page Judith Nickol website">judithnickol.com</a>
                   </div>
-
             </aside>
 
             {{> footer}}
