--- a/src/pages/sitemap.html
+++ b/src/pages/sitemap.html
@@ -1,14 +1,14 @@
 ---
 title: Table of Contents - Sitemap
 description: Sitemap; list of all page links of the site
-page_number: 14
+page_number: 16
 ---
 
 <article class="subpage__left sitemap">
 
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Table of Contents</div>
-        <a href="{{root}}/index.html">Title Page</a>
+        <a href="{{root}}/index.html" class="not_found">Title Page / Home Page</a>
         <ol class="home__menu_list" id="sitemap_menu">
           {{> menu}}
         </ol>
