Page updates with regard to add new j.n. page

--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -14,6 +14,8 @@ page_number: 12
         <p>The site was built for the band, Black Market Research, to showcase the bands' albums and upcoming shows.  The original site was built back in 2012 and was my first responsive design project.  At the time, I read many articles on the subject and used the methods that appealed to me and delivered the best results.  I then researched rock music industry websites of all kinds to learn the visual languages of the sites.</p>
 
         <p>In 2019, I completed the redesign and build of this site to modernize the design and its code.  I wanted to create a simple, minimalist, site design to keep it uncluttered and create an ease of flow between content.</p>
+
+        <p><em>Rebuild launched in 2019.</em></p>
       </div>
 
 </article>
