--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -17,6 +17,8 @@ page_number: 14
         <p>The Gust Gallery is located in the small village in Waterton Lakes National Park.  It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta.  The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region.  The gallery showcases a wide range of mediums, from paintings, sculptures, pottery, glass works, jewelry and more.</p>
 
         <p><em>This is an older site done in tables that I hope to responsively rebuild in the next few months.</em></p>
+
+        <p><em>Rebuild launched in 2020.</em></p>
       </div>
 
 </article>
