--- a/src/pages/judith_nickol_website.html
+++ b/src/pages/judith_nickol_website.html
@@ -16,7 +16,7 @@ page_number: 6
 
                     <p>I wanted the site to be fun and informative.  I designed the website to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
 
-                    <p><em>Built in 2020.</em></p>
+                    <p><em>Launched in 2020.</em></p>
                   </div>
 
             </article>
