--- a/src/pages/ps_websites_built_for_financial_institutions.html
+++ b/src/pages/ps_websites_built_for_financial_institutions.html
@@ -16,6 +16,8 @@ page_number: 4
 
                     <p>The designer provided me with Adobe Illustrator files of the site mockups and wireframes.  I built the site in HTML, CSS, JavaScript with a Bootstrap base to pixel perfectly match the mockups.  Responsible for building to ADA / Section 508 standards, SEO optimized, cross-browser/device tested.  Once completed the website was added to a content management system within project timelines.</p>
 
+                    <p><em>Launched in 2019.</em></p>
+
                     <p><em>The sites shown are the property of the bank.</em></p>
                     <a href="https://www.missionbank.com/" class="subpage__left_side_image"><img src="{{root}}/assets/img/Mission_Bank.png" alt="Mission Bank">MissionBank.com</a>
 
