Added two more pages, adjusted chapter and page numbers.

--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -1,15 +1,15 @@
 ---
-title: Chapter Five; Bert Riggall's Greater Waterton
+title: Chapter Six; Bert Riggall's Greater Waterton
 description: Creation of the website for the book, Bert Riggall's Greater Waterton
-chapter_number: Five
-page_number: 10
+chapter_number: Six
+page_number: 14
 ---
 
             <article class="subpage__left">
 
                   <div class="subpage__left_contents">
                     <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
-                    <h1>Bert Riggall's Greater Waterton, <br />A Conservation Legacy</h1>
+                    <h1>Bert Riggall's Greater Waterton,<br />A Conservation Legacy</h1>
                     <h2>Book</h2>
 
                     <p>Many members of my family contributed in their own ways to help create this beautiful book about my great grandfathers' life and work in the wilds of Southwest Alberta, Canada.  Being the  &ldquo;computer&rdquo; person of the family, I was able to help in my own way by building a website to showcase the book and the events around it.  I was thrilled to attend the book launch, where our tiny town hall was filled with people from the community and family.  It was a wonderful celebration of the work that was now available for all to enjoy.</p>
@@ -17,6 +17,9 @@ page_number: 10
                     <p>One of the main aspects of the book is the many gorgeous black and white photographs.  I wanted to honor these by making the sites' primary colors black, grey, white, and allowing a hint of color with the golden brown for contrast.</p>
 
                     <p>With such a small site, there was no need for navigation, which allowed me to use the full header for the main focus &mdash; the book itself.</p>
+
+                    <p><em>Launched 2017.</em><br />
+                    <a href="http://www.bertriggall.ca">bertriggall.ca</a></p>
                   </div>
 
             </article>
@@ -24,7 +27,7 @@ page_number: 10
             <aside class="subpage__right">
 
                   <div class="subpage__right_contents">
-                        <a href="http://www.bertriggall.ca"><img src="{{root}}/assets/img/bert_riggall_homepage_Jan_2019_section.jpg" alt="Bert Riggall's Greates Waterton, book cover">BertRiggall.ca</a>
+                        <a href="http://www.bertriggall.ca"><img src="{{root}}/assets/img/bert_riggall_homepage_Jan_2019_section.jpg" alt="Bert Riggall's Greates Waterton, book cover">bertriggall.ca</a>
                   </div>
 
             </aside>
