--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Six; Black Market Research
-description: Site built for the Nashville based band, Black Market Research
-chapter_number: Six
-page_number: 12
+title: Chapter Seven; Black Market Research
+description: Pro bono website built for the Nashville based band, Black Market Research
+chapter_number: Seven
+page_number: 14
 ---
 
 <article class="subpage__left">
@@ -15,7 +15,7 @@ page_number: 12
 
         <p>In 2019, I completed the redesign and build of this site to modernize the design and its code.  I wanted to create a simple, minimalist, site design to keep it uncluttered and create an ease of flow between content.</p>
 
-        <p><em>Rebuild launched in 2019.</em></p>
+        <p><em>Pro bono project. Rebuild launched in 2019.</em><br /><a href="https://www.blackmarketresearch.net/">BlackMarketResearch.net</a></p>
       </div>
 
 </article>
