--- a/src/pages/foothill_flyers_disc_golf_club.html
+++ b/src/pages/foothill_flyers_disc_golf_club.html
@@ -1,8 +1,8 @@
 ---
-title: Chapter Four; Foothill Flyers, Colorado Disc Golf Club
+title: Chapter Five; Foothill Flyers, Colorado Disc Golf Club
 description: My latest pro bono website
-chapter_number: Four
-page_number: 8
+chapter_number: Five
+page_number: 12
 ---
 
             <article class="subpage__left">
@@ -12,11 +12,12 @@ page_number: 8
                     <h1>Foothill Flyers</h1>
                     <h2>Colorado Disc Golf Club</h2>
 
-                    <p>The website is a place for the local disc golf club to post information about their annual events, biweekly tags matches and bring attention to the fantastic local courses they access.</p>
+                    <p>The website is a place for the local disc golf club, Foothill Flyest, to post information about their annual events, biweekly tags matches and bring attention to the fantastic local courses they have access to.</p>
 
-                    <p>I wanted the site to be fun and informative.  I designed the website to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
+                    <p>I wanted the site to be fun and informative.  I designed the site to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
 
-                    <p><em>Launched in 2019.</em></p>
+                    <p><em>Pro bono project. Launched in 2019.</em><br />
+                    <a href="https://ffdgc.net">ffdgc.net</a></p>
                   </div>
 
             </article>
@@ -24,7 +25,7 @@ page_number: 8
             <aside class="subpage__right">
 
                   <div class="subpage__right_contents">
-                        <a href="https://ffdgc.net"><img src="{{root}}/assets/img/foothill_flyers_homepage_Aug_2019.jpg" alt="Homepage of Foothill Flyers homepage">FFDGC.net</a>
+                        <a href="https://ffdgc.net"><img src="{{root}}/assets/img/foothill_flyers_homepage_Aug_2019.jpg" alt="Homepage of Foothill Flyers homepage">ffdgc.net</a>
                   </div>
 
             </aside>
