--- a/src/pages/judith_nickol_website.html
+++ b/src/pages/judith_nickol_website.html
@@ -12,11 +12,12 @@ page_number: 6
                     <h1>Judith Nickol</h1>
                     <h2>Canadian Artist</h2>
 
-                    <p>The website is a place for the local disc golf club to post information about their annual events, biweekly tags matches and bring attention to the fantastic local courses they access.</p>
+                    <p>A one page website for the artist to display her works, list the galleries she is showing at and provide a way for interested collectors to contact her.</p>
 
-                    <p>I wanted the site to be fun and informative.  I designed the website to be easy to navigate on mobile and desktop.  We get a lot of sun in Colorado, and the primary color, sky blue, was representative of this.</p>
+                    <p>The design came from the crispness of a gallery showing. Fonts were an important choice for such a stark white background. The labels were created to look like the information card next to a work in a gallery.</p>
 
-                    <p><em>Launched in 2020.</em></p>
+                    <p><em>Launched in 2020.</em><br />
+                    <a href="https://judithnickol.com">judithnickol.com</a></p>
                   </div>
 
             </article>
