--- a/src/pages/linda_anderson_stewart_website_NOT_LIVE.html
+++ b/src/pages/linda_anderson_stewart_website_NOT_LIVE.html
@@ -19,6 +19,9 @@ page_number: 12
         <p>Her fine art is represented in galleries across Alberta, Canada.</p>
 
         <p><em>The artist updates the content herself with a Content Management System.  The homepage has a slide show gallery of her varied works.</em></p>
+
+        <p><em></em><br>
+        <a href="http://www.lindaandersonstewart.com/">lindaandersonstewart.com</a></p>
       </div>
 
 </article>
@@ -26,7 +29,7 @@ page_number: 12
 <aside class="subpage__right">
 
       <div class="subpage__right_contents">
-            <a href="http://www.lindaandersonstewart.com/"><img src="{{root}}/assets/img/linda_anderson_stewart_homepage_Jan_2019.jpg" alt="Website homepage of Linda Anderson Stewart, B.F.A - Fine Art Painter"><img src="{{root}}/assets/img/linda_anderson_stewart_current_works_Jan_2019.jpg" alt="Website, Current Works page, of Linda Anderson Stewart, B.F.A - Fine Art Painter">LindaAndersonStewart.com</a>
+            <a href="http://www.lindaandersonstewart.com/"><img src="{{root}}/assets/img/linda_anderson_stewart_homepage_Jan_2019.jpg" alt="Website homepage of Linda Anderson Stewart, B.F.A - Fine Art Painter"><img src="{{root}}/assets/img/linda_anderson_stewart_current_works_Jan_2019.jpg" alt="Website, Current Works page, of Linda Anderson Stewart, B.F.A - Fine Art Painter">lindaandersonstewart.com</a>
       </div>
 
 </aside>
