--- a/src/pages/peter_raabe_website_NOT_LIVE.html
+++ b/src/pages/peter_raabe_website_NOT_LIVE.html
@@ -17,6 +17,9 @@ page_number: 12
         <p>I created a clean site that was easy to navigate to the many topics with a focus on typography.  I ensured the pages would print well if needed.</p>
 
         <p><em>This is an older site done in tables that I will be updating to responsive and CSS Grid in the next few months.</em></p>
+
+        <p><em></em><br />
+        <a href="http://peterraabe.ca">peterraabe.ca</a></p>
       </div>
 
 </article>
@@ -24,7 +27,7 @@ page_number: 12
 <aside class="subpage__right">
 
       <div class="subpage__right_contents">
-            <a href="http://peterraabe.ca"><img src="{{root}}/assets/img/peter_raabe_homepage_Jan_2019.jpg" alt="Website of Peter B. Raabe, PH.D.">PeterRaabe.ca</a>
+            <a href="http://peterraabe.ca"><img src="{{root}}/assets/img/peter_raabe_homepage_Jan_2019.jpg" alt="Website of Peter B. Raabe, PH.D.">peterraabe.ca</a>
       </div>
 
 </aside>
