--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -1,34 +1,31 @@
 ---
-title: Chapter Eight; Gust Gallery
-description: Background of the Gust Gallery website
-chapter_number: Seven
-page_number: 14
+title: Chapter Four; Gust Gallery
+description: Gust Gallery, Fine Art Gallery in Waterton National Park
+chapter_number: Four
+page_number: 10
 ---
 
 <article class="subpage__left">
-
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Gust Gallery, Fine Arts</h1>
         <h2>Gallery in Waterton Lakes National Park</h2>
 
-        <p>The concept behind the website was to reflect the beauty of the gallery space.  It's a lovely peaceful place surrounded by towering mountain tops that just makes you want to linger a little longer.  The colors of the site were taken from the gallery it self.  The dark brown wooden floors, rich red awning and cream-colored walls.  I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
+        <p>The concept behind the website was to reflect the beauty of the gallery space.  It's a lovely peaceful place surrounded by towering mountain tops that just makes you want to linger a little longer.  The colors of the site were taken from the gallery itself.  The dark brown wooden floors, rich red awning and cream-colored walls.  I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
 
         <p>The Gust Gallery is located in the small village in Waterton Lakes National Park.  It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta.  The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region.  The gallery showcases a wide range of mediums, from paintings, sculptures, pottery, glass works, jewelry and more.</p>
 
         <p><em>This is an older site done in tables that I hope to responsively rebuild in the next few months.</em></p>
 
-        <p><em>Rebuild launched in 2020.</em></p>
+        <p><em>Rebuild launched in 2020.</em><br />
+        <a href="http://www.gustgallery.com">gustgallery.com</a></p>
       </div>
-
 </article>
 
 <aside class="subpage__right">
-
       <div class="subpage__right_contents">
-            <a href="http://www.gustgallery.com"><img src="{{root}}/assets/img/gust_gallery_homepage_Jan_2019.jpg" alt="Website homepage of Gust Gallery"><img src="{{root}}/assets/img/gust_gallery_artists_page_Jan_2019.jpg" alt="Website Artists page of Gust Gallery">GustGallery.com</a>
+            <a href="http://www.gustgallery.com"><img src="{{root}}/assets/img/gust_gallery_homepage_Jan_2019.jpg" alt="Website homepage of Gust Gallery"><img src="{{root}}/assets/img/gust_gallery_artists_page_Jan_2019.jpg" alt="Website Artists page of Gust Gallery">gustgallery.com</a>
       </div>
-
 </aside>
 
-{{> footer}}>
+{{> footer}}
