Added Judith and Gallery to website, updated anchor colors for ADA. Launched

--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -6,7 +6,6 @@ page_number: 14
 ---
 
             <article class="subpage__left">
-
                   <div class="subpage__left_contents">
                     <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
                     <h1>Bert Riggall's Greater Waterton,<br />A Conservation Legacy</h1>
@@ -27,7 +26,7 @@ page_number: 14
             <aside class="subpage__right">
 
                   <div class="subpage__right_contents">
-                        <a href="http://www.bertriggall.ca"><img src="{{root}}/assets/img/bert_riggall_homepage_Jan_2019_section.jpg" alt="Bert Riggall's Greates Waterton, book cover">bertriggall.ca</a>
+                        <a href="http://www.bertriggall.ca"><img src="{{root}}/assets/img/Bert_Riggall_website_homepage.jpg" alt="Bert Riggall website homepage">bertriggall.ca</a>
                   </div>
 
             </aside>
