--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -4,18 +4,15 @@ description: Gust Gallery, Fine Art Gallery in Waterton National Park
 chapter_number: Four
 page_number: 10
 ---
-
 <article class="subpage__left">
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
         <h1>Gust Gallery, Fine Arts</h1>
         <h2>Gallery in Waterton Lakes National Park</h2>
 
-        <p>The concept behind the website was to reflect the beauty of the gallery space.  It's a lovely peaceful place surrounded by towering mountain tops that just makes you want to linger a little longer.  The colors of the site were taken from the gallery itself.  The dark brown wooden floors, rich red awning and cream-colored walls.  I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
+        <p>The concept behind the website was to reflect the beauty of the gallery space.  It's a lovely peaceful shop surrounded by towering mountain tops that just makes you want to linger a little longer.  The colors of the site were taken from the gallery itself.  The dark brown wooden floors, rich red awning and cream colored walls.  I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
 
-        <p>The Gust Gallery is located in the small village in Waterton Lakes National Park.  It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta.  The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region.  The gallery showcases a wide range of mediums, from paintings, sculptures, pottery, glass works, jewelry and more.</p>
-
-        <p><em>This is an older site done in tables that I hope to responsively rebuild in the next few months.</em></p>
+        <p>The Gust Gallery is located in the small village of Waterton Park in Waterton Lakes National Park.  It sits surrounded by the beauty of the Rocky Mountains of Southern Alberta.  The unique beauty of the area is reflected in the works of the gallery that are created by artists of the region.  The gallery showcases a wide range of mediums, from paintings, sculptures, pottery, glass works, jewelry and more.</p>
 
         <p><em>Rebuild launched in 2020.</em><br />
         <a href="http://www.gustgallery.com">gustgallery.com</a></p>
@@ -24,7 +21,7 @@ page_number: 10
 
 <aside class="subpage__right">
       <div class="subpage__right_contents">
-            <a href="http://www.gustgallery.com"><img src="{{root}}/assets/img/gust_gallery_homepage_Jan_2019.jpg" alt="Website homepage of Gust Gallery"><img src="{{root}}/assets/img/gust_gallery_artists_page_Jan_2019.jpg" alt="Website Artists page of Gust Gallery">gustgallery.com</a>
+            <a href="http://www.gustgallery.com"><img src="{{root}}/assets/img/Gust_Gallery_website_homepage.jpg" alt="Website homepage of Gust Gallery">gustgallery.com</a>
       </div>
 </aside>
 
