--- a/src/pages/introduction_sarah_k_russell.html
+++ b/src/pages/introduction_sarah_k_russell.html
@@ -6,13 +6,12 @@ page_number: 2
 ---
 
 <article class="subpage__left">
-
       <div class="subpage__left_contents">
             <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter}}</div>
             <h1>Introduction to the<br />Web Developer;</h1>
             <h2>Sarah K. Russell</h2>
 
-            <p>I fell in love with web development in my last year at the University of Alberta, Canada.  I signed up for Web Design when I needed one more studio course to complete my Bachelor of Design.  Before I knew it, I was at the top of my class!  It all just clicked.  With this thrilling discovery, my career was shaped from that day forward.</p>
+            <p>I fell in love with web development in my last year at the University of Alberta, Canada.  I signed up for Web Design when I needed one more studio course to complete my Bachelor of Design.  Before I knew it, I was at the top of my class!  The coding just made sense to me, it just clicked!  With this thrilling discovery, my career was shaped from that day forward.</p>
 
             <p>For over a decade, I have been working professionally building websites.  To develop websites is to be continually learning new things and discovering how best to apply them.  This fantastic industry is always coming up with new and better ways of building websites.  All the while, making sure you give the user the best experience you can.  It is the perfect industry for someone like myself, who is always looking for a fun new challenge and who loves continued learning.  Within my years, I have relearned how to build websites with the significant changes we've experienced; tables and fixed&mdash;width, floats, responsive building and mobile&mdash;first, and now CSS Flexbox and Grid.</p>
       </div>
@@ -32,7 +31,7 @@ page_number: 2
         <ul class="subpage__right_contents_list">
           <li><p>Contact me at <a href="mailto:info@skrdesign.com?subject=Inquiry%20From%20SKRDesign%20Site">info@skrdesign.com</a>.</p></li>
           <li><p>Connect with me on <a href="https://www.linkedin.com/in/sarahkrussell">LinkedIn</a>.</p></li>
-          <li><p>Resume &mdash; format <a href="{{root}}assets/img/Sarah_K_Russell_Web_Developer_Resume.pdf" target="_blank">PDF</a>, <a href="{{root}}assets/img/Sarah_K_Russell_Web_Developer_Resume.docx" target="_blank">Word</a>.</p></li>
+          <li><p>Resume &mdash; format <a href="{{root}}assets/img/Sarah_K_Russell_Senior_Web_Developer_Resume.pdf" target="_blank">PDF</a>, <a href="{{root}}assets/img/Sarah_K_Russell_Senior_Web_Developer_Resume.docx" target="_blank">Word</a>.</p></li>
         </ul>
 
 
