--- a/src/pages/judith_nickol_website.html
+++ b/src/pages/judith_nickol_website.html
@@ -6,15 +6,14 @@ page_number: 6
 ---
 
             <article class="subpage__left">
-
                   <div class="subpage__left_contents">
                     <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
                     <h1>Judith Nickol</h1>
                     <h2>Canadian Artist</h2>
 
-                    <p>A one page website for the artist to display her works, list the galleries she is showing at and provide a way for interested collectors to contact her.</p>
+                    <p>A one page website for the artist to display her works, list of galleries showing her work, and providing a way for interested collectors to contact her.</p>
 
-                    <p>The design came from the crispness of a gallery showing. Fonts were an important choice for such a stark white background. The labels were created to look like the information card next to a work in a gallery.</p>
+                    <p>The design came from the crispness of a gallery.  Typography is always important do a design, but on a stark site it's even more important.  The labels were created to look like the information card next to a work in a gallery.</p>
 
                     <p><em>Launched in 2020.</em><br />
                     <a href="https://judithnickol.com">judithnickol.com</a></p>
@@ -24,7 +23,7 @@ page_number: 6
 
             <aside class="subpage__right">
                   <div class="subpage__right_contents">
-                        <a href="https://judithnickol.com"><img src="{{root}}/assets/img/" alt="Section of single page Judith Nickol website">judithnickol.com</a>
+                        <a href="https://judithnickol.com"><img src="{{root}}/assets/img/Judith_Nickol_homepage_website.jpg" alt="Homepage of Judith Nickol website">judithnickol.com</a>
                   </div>
             </aside>
 
