Updated merge conflicts

--- a/src/pages/page_not_found.html
+++ b/src/pages/page_not_found.html
@@ -10,7 +10,7 @@ page_number: ---
             <h2>the page you are looking for could not be found</h2>
         </div>
         <ol class="home__menu_list" id="sitemap_menu">
-            <a href="{{root}}/index.html" class="not_found">Title Page / Home Page</a>
+            <a href="{{root}}/index.html" class="not_found">Chapters Index / Homepage</a>
           {{> menu}}
         </ol>
       </div>
