Updated some Chapter titles to match nav and renamed the not in use pages

--- a/src/pages/gust_gallery_website.html
+++ b/src/pages/gust_gallery_website.html
@@ -7,8 +7,8 @@ page_number: 10
 <article class="subpage__left">
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Chapter {{chapter_number}}</div>
-        <h1>Gust Gallery, Fine Arts</h1>
-        <h2>Gallery in Waterton Lakes National Park</h2>
+        <h1>Gust Gallery</h1>
+        <h2>Fine Art Gallery</h2>
 
 
         <p>The concept behind the website was to reflect the beauty of the gallery space.  It's a lovely peaceful shop surrounded by towering mountain tops that just makes you want to linger a little longer.  The colors of the site were taken from the gallery itself.  The dark brown wooden floors, rich red awning and cream colored walls.  I wanted to keep the navigation and logo area minimal to keep the focus on the works being represented.</p>
