Updated images on a few pages and removed img background on all images, except for BMR. Add not_in_use folder

--- a/src/pages/black_market_research_website.html
+++ b/src/pages/black_market_research_website.html
@@ -22,7 +22,7 @@ page_number: 14
 <aside class="subpage__right">
 
       <div class="subpage__right_contents">
-            <a href="https://www.blackmarketresearch.net/"><img src="{{root}}/assets/img/black_market_research_aboutpage_Oct_20109.png" alt="Website of Black Market Research">BlackMarketResearch.net</a>
+            <a href="https://www.blackmarketresearch.net/"><img src="{{root}}/assets/img/black_market_research_aboutpage.jpg" alt="Website of Black Market Research" class="image_background">BlackMarketResearch.net</a>
       </div>
 
 </aside>
