--- a/src/pages/judith_nickol_website.html
+++ b/src/pages/judith_nickol_website.html
@@ -23,7 +23,7 @@ page_number: 6
 
             <aside class="subpage__right">
                   <div class="subpage__right_contents">
-                        <a href="https://judithnickol.com"><img src="{{root}}/assets/img/Judith_Nickol_homepage_website.jpg" alt="Homepage of Judith Nickol website">judithnickol.com</a>
+                        <a href="https://judithnickol.com"><img src="{{root}}/assets/img/Judith_Nickol_homepage_website.png" alt="Homepage of Judith Nickol website">judithnickol.com</a>
                   </div>
             </aside>
 
