Updates to sitemap layout

--- a/src/pages/bert_riggall_website.html
+++ b/src/pages/bert_riggall_website.html
@@ -11,7 +11,7 @@ page_number: 14
                     <h1>Bert Riggall's Greater Waterton,<br />A Conservation Legacy</h1>
                     <h2>Book</h2>
 
-                    <p>Many members of my family contributed in their own ways to help create this beautiful book about my great grandfathers' life and work in the wilds of Southwest Alberta, Canada.  Being the  &ldquo;computer&rdquo; person of the family, I was able to help in my own way by building a website to showcase the book and the events around it.  I was thrilled to attend the book launch, where our tiny town hall was filled with people from the community and family.  It was a wonderful celebration of the work that was now available for all to enjoy.</p>
+                    <p>Many members of my family contributed in their own ways to help create this beautiful book about my great grandfathers' life and work in the wilds of Southwest Alberta, Canada.  Being the  &ldquo;computer&rdquo; person of the family, I was able to help in my own way by building a website to showcase the book and the events around it.  I was thrilled to attend the book launch, where our tiny town hall was filled with people from the community and all of my family.  It was a wonderful celebration of the work that was now available for all to enjoy.</p>
 
                     <p>One of the main aspects of the book is the many gorgeous black and white photographs.  I wanted to honor these by making the sites' primary colors black, grey, white, and allowing a hint of color with the golden brown for contrast.</p>
 
