--- a/src/pages/sitemap.html
+++ b/src/pages/sitemap.html
@@ -7,20 +7,7 @@ page_number: 18
 <article class="subpage__left sitemap">
       <div class="subpage__left_contents">
         <div class="subpage__left_chapter" id="main_content" role="main">Table of Contents</div>
-        <a href="{{root}}/index.html" class="not_found">Chapters Index &mdash; Homepage</a>
-        <ol class="home__menu_list" id="sitemap_menu">
-          {{> menu}}
-        </ol>
-      </div>
 
-</article>
-
-<aside class="subpage__right">
-
-      <div class="subpage__right_contents">
-
-      </div>
-
-</aside>
+        {{> not_found_sitemap_menu_section}}
 
 {{> footer}}
