--- a/src/pages/page_not_found.html
+++ b/src/pages/page_not_found.html
@@ -5,24 +5,11 @@ page_number: ---
 
 <article class="subpage__left">
       <div class="subpage__left_contents">
-        <div class="subpage__left_chapter " id="main_content" role="main">
-             <h1>Sorry,</h1>
+        <div class="subpage__left_chapter" id="main_content" role="main">
+            <h1>Sorry,</h1>
             <h2>the page you are looking for could not be found</h2>
         </div>
-        <ol class="home__menu_list" id="sitemap_menu">
-            <a href="{{root}}/index.html" class="not_found">Chapters Index / Homepage</a>
-          {{> menu}}
-        </ol>
-      </div>
 
-</article>
-
-<aside class="subpage__right">
-
-      <div class="subpage__right_contents">
-
-      </div>
-
-</aside>
+        {{> not_found_sitemap_menu_section}}
 
 {{> footer}}
